# TensorComprehensions

./: .gitignore  .gitmodules  BUILD.md  CMakeLists.txt  build.sh
benchmarks/: benchmark_fixture.h
conda_recipes/: README.md
examples/: wavenet.cc
include/tc/core/: compilation_cache-inl.h  compilation_cache.h  flags.h
python/benchmarks/: python_overhead.py
python/examples/: min_distance.py
python/tests/: test_tc.py
src/autotuner/: CMakeLists.txt  genetic_autotuner.cc
src/core/: CMakeLists.txt  compilation_cache.cc  flags.cc
tc/: CMakeLists.txt
tc/aten/: CMakeLists.txt  aten_autotuner-inl.h  aten_autotuner.h
tc/autotuner/: autotuner-inl.h  autotuner.h  options_cache-inl.h  options_cache.h  parameters.cc  parameters.h
tc/benchmarks/: CMakeLists.txt  MLP_model.cc  MLP_model.h  batchmatmul.cc  benchmark_fixture.h  group_convolution.cc  group_normalization.cc  group_normalization.h  kronecker.cc  kronecker.h  moments.cc  moments.h  tmm.cc  wavenet.cc  wavenet.h
tc/benchmarks/scripts/: AUTOTUNER_COMMANDS  autotuner_parallel.sh  report.sh
tc/c2/: CMakeLists.txt
tc/core/: CMakeLists.txt  tc_executor-inl.h  tensor.cc
tc/lang/: CMakeLists.txt
tc/proto/: CMakeLists.txt
tc/version/: version.cc.in
tensor_comprehensions/: __init__.py
tensor_comprehensions/pybinds/: CMakeLists.txt  pybind_engine.cc  tclib.cc
test/: CMakeLists.txt  test_mapper_memory_promotion.cc
test/caffe2/cuda/: CMakeLists.txt
test/cuda/: CMakeLists.txt  test_autotuner.cc  test_autotuner_utility.cc  test_compilation_cache.cc  test_tc_mapper_bugs.cc
(+17 files in other folders)
